# osmosis-remote-rollout-example

./: .gitignore  README.md  pyproject.toml  server.py  test_data.jsonl
rollout_server/: README.md  README_LOGGING.md  STATUS.md  pyproject.toml  rewards.py  server.py  tools.py
rollout_server/docs/: ARCHITECTURE.md  DEPLOYMENT.md  REQUEST_FLOW_EXAMPLE.md  RESPONSE_MASK_GUIDE.md  TESTING.md  TOKEN_ATTRIBUTION_GUIDE.md
rollout_server/examples/: basic_example.py  calculator_example.py  e2e_test_with_servers.py  mock_trainer_example.py
rollout_server/scripts/: start_server.sh  start_test_environment.sh  stop_test_environment.sh  view_logs.sh
rollout_server/src/rollout_server/: __init__.py  config.py  exceptions.py  executor.py  schemas.py  server.py  session.py
rollout_server/src/rollout_server/schemas/: __init__.py  completions.py  constants.py  messages.py  params.py  rollout.py  tools.py
rollout_server/src/rollout_server/tools/: __init__.py  calculator.py
rollout_server/tests/: README.md  conftest.py  test_with_mock_trainer.py
rollout_server/tests/e2e/: __init__.py  test_e2e_rollout.py
rollout_server/tests/integration/: test_async_init_flow.py  test_response_mask.py  test_rollout_api.py
rollout_server/tests/mocks/: mock_trainer.py
rollout_server/tests/unit/: test_schemas.py  test_session.py
tool_server/: README.md
